--- a/shell/starship_purple.toml
+++ b/shell/starship_purple.toml
@@ -24,6 +24,7 @@ $docker_context\
 $conda\
 [](fg:color_bg3 bg:color_bg1)\
 $time\
+ $cmd_duration\
 [ ](fg:color_bg1)\
 $line_break$character"""
 
@@ -159,6 +160,11 @@ disabled = false
 time_format = "%R"
 style = "bg:color_bg1"
 format = '[[  $time ](fg:color_fg0 bg:color_bg1)]($style)'
+
+[cmd_duration]
+min_time = 500
+style = "bg:color_bg1"
+format = '[$duration](fg:color_p3 bg:color_bg1)'
 
 [line_break]
 disabled = false
